--- a/app/core/templates/core/modals/add-countlistitem-modal.html
+++ b/app/core/templates/core/modals/add-countlistitem-modal.html
@@ -15,9 +15,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <a id="addCountLink">
-                <button type="button" class="btn btn-primary">Add</button>
-            </a>
+            <button type="button" id="addCountButton" class="btn btn-primary">Add</button>
         </div>
     </div>
     </div>
