--- a/app/templates/navbars/office-navbar-items.html
+++ b/app/templates/navbars/office-navbar-items.html
@@ -27,6 +27,8 @@
         <li><a class="dropdown-item" href="/prodverse/items-to-count?recordType=warehouse">Create Warehouse Count List</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-blend-counts?recordType=blend">Create A Blend Count List</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-component-counts?recordType=blendcomponent">Create Blend Component Count List</a></li>
+        <li><a class="dropdown-item" href="/core/items-by-audit-group?recordType=blend">Blend Count List from Audit Group</a></li>
+        <li><a class="dropdown-item" href="/core/items-by-audit-group?recordType=blendcomponent">Component Count List from Audit Group</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/count-records/?recordType=warehouse">View All Warehouse Count Records</a></li>
         <li><a class="dropdown-item" href="/core/count-records?recordType=blend">View All Blend Counts</a></li>
