Update mobile styling to make things less terrible.

--- a/app/core/static/core/css/lotNumRecords.css
+++ b/app/core/static/core/css/lotNumRecords.css
@@ -46,3 +46,9 @@ td {
     display: none;
 }
 
+@media only screen and (max-width: 600px) {
+    table {
+        width: 100%;
+        font-size: 8px;
+    }
+}
