Get everything lookin stable.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -14,7 +14,7 @@
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/tank-levels">Tank Levels</a></li>
-        <li><a class="dropdown-item" href="/core/lot-num-records">Lot Numbers</a></li>
+        <li><a class="dropdown-item" href="/core/lot-num-records?recordType=blend">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages?recordType=blend">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/display-ghs-label-search">GHS Labels</a></li>
