--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -92,7 +92,7 @@
                                             <div class="container-monitor" data-countrecord-id="{{ item.id }}" style="display:none;" data-container-id-updated=""></div>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
+                                            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Save</button>
                                         </div>
                                     </div>
                                     </div>
