--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -52,6 +52,29 @@ input::-webkit-inner-spin-button {
     display: none; 
 }
 
+#connectionStatusIndicator {
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border-radius: 9px;
+    position: fixed; 
+    bottom: 20px; 
+    right: 20px; 
+    z-index: 1000;
+}
+
+.connected {
+    background-color: green;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+.disconnected {
+    background-color: rgb(194, 0, 0);
+}
+
+
 #searchDiv {
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
     width: auto;
