--- a/app/core/templates/core/inventorycounts/countcollectionlinks.html
+++ b/app/core/templates/core/inventorycounts/countcollectionlinks.html
@@ -3,8 +3,35 @@
 {% block scripts %} <link rel="stylesheet" type="text/css" href="{% static 'core/css/countcollectionlinks.css' %}">{% endblock%}
 {% block title %}<title>Count Lists</title>{% endblock %}
 
-
 {% block content %}
+    {% if user.is_staff %}
+        <div class="text-center my-4">
+            <a id="add-automated-blendcount-button" class="btn btn-primary">Create Automated Blend Count List</a>
+            <img id="blendcount-loading" src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20" style="display: none;"></img>
+            <span id="blendcount-success" style="display: none;">
+                <i class="fa fa-check-circle text-success"></i> Countlist successfully created.
+            </span>
+            <span id="blendcount-no-action" style="display: none;">
+                <i class="fa fa-check-circle text-success"></i> Countlist for today already exists.
+            </span>
+            <span id="blendcount-failure" style="display: none;">
+                <i class="fa fa-times-circle text-danger"></i> Countlist not created. Check console for errors.
+            </span>
+        </div>
+        <div class="text-center my-4">
+            <a id="add-automated-blendcomponentcount-button" class="btn btn-primary">Create Automated Component Count List</a>
+            <img id="blendcomponentcount-loading" src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20" style="display: none;"></img>
+            <span id="blendcomponentcount-success" style="display: none;">
+                <i class="fa fa-check-circle text-success"></i> Countlist successfully created.
+            </span>
+            <span id="blendcomponentcount-no-action" style="display: none;">
+                <i class="fa fa-check-circle text-success"></i> Countlist for today already exists.
+            </span>
+            <span id="blendcomponentcount-failure" style="display: none;">
+                <i class="fa fa-times-circle text-danger"></i> Countlist not created. Check console for errors.
+            </span>
+        </div>
+    {% endif %}
     {% if count_collection_exists %}
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered table-hover" id="countCollectionLinkTable">
