Interface countlist updates

--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -27,11 +27,13 @@ td[class*='variance'] {
 
 .tbl-cell-counted_quantity input {
     width: 80px;
+    background-color: transparent;
+    border: none;
+    text-align: right;
 }
 
 .tbl-cell-counted_quantity {
-    text-align: center;
-    display: none;
+    text-align: right;
 }
 
 .tbl-cell-containers {
