--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -22,6 +22,7 @@
                         <th scope="col" class="text-center">Description</th>
                         <th scope="col" class="text-center">Exp. Qty</th>
                         <th scope="col" class="text-center">Count</th>
+                        <th scope="col" class="text-center">Counted</th>
                         <th scope="col" class="noPrint text-center">Variance</th>
                         <th scope="col" class="noPrint text-center">Approved</th>
                         <th scope="col" class="noPrint text-center">Comment</th>
