--- a/app/core/templates/core/modals/edit-confirm-countrecord-modal.html
+++ b/app/core/templates/core/modals/edit-confirm-countrecord-modal.html
@@ -11,7 +11,7 @@
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
             <a id="editCountRecordsModalButtonLink" href="">
-                <button type="button" class="btn btn-primary" id="editCountRecordsModalButton">Edit</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="editCountRecordsModalButton">Edit</button>
             </a>
         </div>
     </div>
