Remove forklift item from navbar

--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -1,11 +1,11 @@
-<li class="nav-item dropdown">
+{% comment %} <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="issueSheetNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Forklift
     </a>
     <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
         <li><a class="dropdown-item" href="/core/forklift-checklist">Forklift Checklist</a></li>
     </ul>
-</li>
+</li> {% endcomment %}
 <li class="nav-item dropdown" id="blendingDropdown">
     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Blending
