--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
   {% if user.is_authenticated %}
     Hi {{ user.first_name }}!
     <br><br>
-    <a class="btn btn-secondary" href="/core/forklift-checklist">Create New Forklift Log</a>
+    {% comment %} <a class="btn btn-secondary" href="/core/forklift-checklist">Create New Forklift Log</a> {% endcomment %}
   {% else %}
     <p class='text-left'>You are not logged in.</p>
     <br>
