Correct spacing on specsheet buttons.

--- a/app/prodverse/templates/prodverse/specsheet.html
+++ b/app/prodverse/templates/prodverse/specsheet.html
@@ -140,7 +140,7 @@
 
 
 <div class="specsheetTableContainer" style="max-width: 800px;">
-    <div class="noPrint" id="flushButtonContainer" style="position: absolute; left: 10vw; top: 35vh; z-index: 999;">
+    <div class="noPrint" id="flushButtonContainer" style="text-align: center; margin-bottom: 1rem;">
         <button class="btn btn-secondary" onclick="document.getElementById('flushPartsDialog').showModal()">Show Flush Part Numbers</button>
     </div>
     <table class="specsheet-table table">
