--- a/app/prodverse/templates/prodverse/specsheet.html
+++ b/app/prodverse/templates/prodverse/specsheet.html
@@ -56,9 +56,7 @@
 {{state_json}}
 </div>
 
-
-
-<dialog class="noPrint" id="flushPartsDialog">
+<dialog class="noPrint" id="flushPartsDialog" style="position: fixed;">
     <div class="modal-header">
         <h5 class="modal-title">Flush Material Part Numbers</h5>
         <button type="button" class="btn-close" onclick="document.getElementById('flushPartsDialog').close()" aria-label="Close"></button>
