--- a/app/prodverse/templates/prodverse/specsheet.html
+++ b/app/prodverse/templates/prodverse/specsheet.html
@@ -56,7 +56,7 @@
 {{state_json}}
 </div>
 
-<dialog class="noPrint" id="flushPartsDialog" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); margin: 0;">
+<dialog class="noPrint" id="flushPartsDialog" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); margin: 0; z-index: 999;">
     <div class="modal-header">
         <h5 class="modal-title">Flush Material Part Numbers</h5>
         <button type="button" class="btn-close" onclick="document.getElementById('flushPartsDialog').close()" aria-label="Close"></button>
