Comment out urls missing views.py functions

--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -68,6 +68,7 @@
                                                         <th>Quantity</th>
                                                         <th>Container Type</th>
                                                         <th class="tareWeight {% if record_type == 'blend' %}hidden{% endif %}">Tare Weight</th>
+                                                        <th class="netMeasurement {% if record_type == 'blend' %}hidden{% endif %}">NET</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody class="containerTbody"></tbody>
