--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -59,6 +59,7 @@
         <li><a class="dropdown-item" href="/core/checklist-management/">Forklift Reports</a></li>
         <li><a class="dropdown-item" href="/core/foam-factors">Foam Factors</a></li>
         <li><a class="dropdown-item" href="/core/display-all-GHS-pictograms">Edit GHS Pictograms</a></li>
+        <li><a class="dropdown-item" href="/core/attendance-report">Attendance Records</a></li>
     </ul>
 </li>
 <li class="nav-item">
