Add dedicated page for blend tote labels

--- a/app/core/templates/core/modals/blendlabeltemplate.html
+++ b/app/core/templates/core/modals/blendlabeltemplate.html
@@ -46,8 +46,8 @@
     </div>
     
     
-    <img class="warningImage" id="blend-label-uv-img" src="{% static 'core/media/NO_UV.png' %}" height="50" width="50" style="display:none;">
-    <img class="warningImage" id="blend-label-freeze-img" src="{% static 'core/media/NO_FREEZE.png' %}" height="50" width="50" style="display:none;">
+    <img class="warningImage" id="blend-label-uv-img" src="{% static 'core/media/NO_UV.jpg' %}" height="50" width="50" style="display:none;">
+    <img class="warningImage" id="blend-label-freeze-img" src="{% static 'core/media/NO_FREEZE.jpg' %}" height="50" width="50" style="display:none;">
     <img class="warningImage" id="blend-label-blank-freeze-img" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" style="display:none;">
     <img class="warningImage" id="blend-label-blank-uv-img" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" style="display:none;">
 </dialog>
